# gomax-prerelease

./: .gitignore  README.md  go.work  go.work.sum
.github/workflows/: ci.yml
docs/Pymax/: .gitignore  README.md  pyproject.toml
docs/Pymax/src/pymax/: core.py  types.py
docs/Pymax/src/pymax/mixins/: websocket.py
gomax/: LICENSE  README.md  client.go  client_handlers_test.go  client_methods.go  client_methods_test.go  client_test.go  errors.go  go.mod  go.sum  integration_test.go  telemetry.go
gomax/bindings/rust/: .gitignore  Cargo.toml  README.md  build.rs
gomax/bindings/rust/ffi/: bridge.go
gomax/bindings/rust/src/: lib.rs
gomax/enums/: auth.go  chat_message.go  formatting.go  opcode.go
gomax/examples/: example.go
gomax/examples/dialogs/: main.go
gomax/files/: file.go
gomax/filters/: filter.go
gomax/internal/constants/: constants.go
gomax/internal/database/: db.go  models.go
gomax/internal/payloads/: auth.go  channel.go  group.go  message.go  payload.go  self.go  telemetry.go  user.go
gomax/internal/utils/: formatter.go  json.go  map.go
gomax/logger/: logger.go
gomax/types/: attach.go  chat.go  element.go  folder.go  message.go  presence.go  request.go  session.go  user.go
mockserver/: api_handlers.go  constants.go  enums.go  event_builders.go  go.mod  helpers.go  responses.go  rest_client.go  rest_integration_test.go  server.go
mockserver/cmd/server/: api.go  constants.go  enums.go  events.go  main.go  responses.go  server.go  server_test.go
