[package]
name = "gomax-rs"
version = "0.1.0"
edition = "2021"
description = "FFI биндинги к Go библиотеке fresh-milkshake/gomax (messenger Max)"
license = "MIT"
authors = ["gomax maintainers"]
build = "build.rs"

[lib]
name = "gomax_rs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

